correction de quelques erreurs html (strong et br)

--- a/CV Michael Donati (version site web).html
+++ b/CV Michael Donati (version site web).html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style michael.css" />
+  <link rel="stylesheet" href="./style michael.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
   <title>CV Michael Donati, Développeur Web Junior</title>
@@ -18,20 +18,8 @@
   <meta property="og:title" content="CV Michael Donati, Développeur Web Junior" />
   <meta property="og:type" content="CV" />
   <meta property="og:url" content="http://www.example.com/" /> <!-- a voir plus tard -->
-  <meta property="og:image" content="http://example.com/image.jpg" /> <!-- a voir plus tard -->
+  <meta property="og:image" content="https://res.cloudinary.com/dzebvallz/image/upload/v1590668880/ma_photo_de_profil2_ni0iv9.jpg" />
   <meta property="og:description" content="Version web de mon CV, un aperçu de mes compétences :)" />
-
-  <!-- Twitter Card data -->
-  <meta name="twitter:card" content="?">
-  <meta name="twitter:site" content="@publisher_handle">
-  <meta name="twitter:title" content="CV Michael Donati, Développeur Web Junior">
-  <meta name="twitter:description"
-    content="Profitez de mon CV en ligne, entièrement codé à la main, pour juger de mes compétences en tant que développeur web">
-  <meta name="twitter:creator" content="@author_handle">
-
-  <!-- Twitter Summary card images must be at least 200x200px -->
-  <meta name="twitter:image"
-    content="https://res.cloudinary.com/dzebvallz/image/upload/g_face,c_thumb,w_200,h_200/v1590604497/ma_photo_de_profil_xrwcep.jpg">
 
 
 </head>
@@ -54,31 +42,31 @@
           <h2>CONTACT</h2>
             <div id="responsive_wrap"> 
             <ul>
-              <strong>
+              <b>
                 <li>Adresse</li>
-              </strong>
+              </b>
               <li>87 rue de la Carlineto
-                </br>Les Acanthes
-                </br>Salon-de-Provence
-                </br>France
+                <br>Les Acanthes
+                <br>Salon-de-Provence
+                <br>France
               </li>
             </ul>
             <ul>
-              <strong>
+              <b>
                 <li>Téléphone</li>
-              </strong>
+              </b>
               <li><a href="tel:0033651385780">+336.51.38.57.80</a> </li>
             </ul>
             <ul>
-              <strong>
+              <b>
                 <li>Email</li>
-              </strong>
+              </b>
               <li><a href="mailto:mon.email@mail.com">mon.email@mail.com</a></li>
             </ul>
             <ul>
-              <strong>
+              <b>
                 <li>Linkdln</li>
-              </strong>
+              </b>
               <li><a href="https://www.linkedin.com/in/michael-donati-98b57792/" target="_blank">Voir mon
                   profil</a>
               </li>
@@ -92,10 +80,10 @@
           <h2>A PROPOS DE MOI</h2>
           <p>
             Après de longues années à étudier la communication, le management, et les langues, j'ai décidé
-            d'apprendre un des langages de l'avenir : le code informatique. </br></br>
+            d'apprendre un des langages de l'avenir : le code informatique. <br><br>
 
             En mettant à profit mes connaissances en marketing, en économie mais aussi en SEO, je compte créer
-            des sites optimisés à la fois pour le référencement, et pour les besoins du client. </br></br>
+            des sites optimisés à la fois pour le référencement, et pour les besoins du client. <br><br>
 
             Grâce à l'aide de mes mentors et d'OCR, j'ai travaillé sur différents projets, autant personnels que
             professionnels, dont je serais ravis de vous faire part lors d'un entretien.
@@ -267,8 +255,8 @@
           <div class="mentor">
             <h3>Nicolas Cordier</h3>
             <p>Ingénieur en informatique
-              </br>06.XX.XX.XX.XX
-              </br><a href="mailto:">Nicolas Cordier</a>
+              <br>06.XX.XX.XX.XX
+              <br><a href="mailto:">Nicolas Cordier</a>
             </p>
           </div>
 
@@ -276,8 +264,8 @@
           <div class="mentor">
             <h3>Benjamin Bloom</h3>
             <p>Ingénieur en informatique
-              </br>06.XX.XX.XX.XX
-              </br><a href="mailto:">Benjamin Bloom</a>
+              <br>06.XX.XX.XX.XX
+              <br><a href="mailto:">Benjamin Bloom</a>
             </p>
           </div>
         </div>
