article => div class = "article" (pour retirer les warnings du html check)

--- a/CV Michael Donati (version site web).html
+++ b/CV Michael Donati (version site web).html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style_michael.css" />
+  <link rel="stylesheet" href="style_michael.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
   <title>CV Michael Donati, Développeur Web Junior</title>
@@ -95,7 +95,7 @@
 
       <!--  PARTIE DE DROITE (Article) -->
 
-    <article>
+    <div class="article">
 
       <!--  Grand titre : Nom, prénom, métier / poste recherché  -->
 
@@ -264,7 +264,7 @@
 
       </section>
 
-    </article>
+    </div>
 
   </main>
 
